{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "401d3610-bfa5-471f-8f19-0097621db234",
            "actions": [
                {
                    "name": "MovePress",
                    "type": "Button",
                    "id": "fb46a011-13f7-4b67-8753-bae37a7bf8da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "4be4c535-7d13-4594-9021-3162d8c507bb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "VericalMove",
                    "type": "PassThrough",
                    "id": "72ffbb62-42d3-4cc9-bd39-ebd912c74669",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dd3d7d32-6ce6-45a7-bd92-52a3a5b46150",
                    "path": "<XRController>{LeftHand}/trackpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71a9c858-8da6-4a92-a832-753b7e6d6dfd",
                    "path": "<XRController>{RightHand}/trackpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "4fb5e3c2-5ca9-4dc4-b568-a50f50b4110f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "071a8a09-d04b-4365-9a6c-1ba396cf8bc6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f2c81fea-efd5-4c72-9adc-5f3458e55b0c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f31ad043-b0ea-4ffa-98cb-2d2dccb66fa1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "40813ea1-507d-47ae-8c80-d3c85399fbb7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cb3ff27c-40e7-4ca8-af5b-19f9aef6bfaa",
                    "path": "<XRController>{RightHand}/trackpadPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fc857fd-7149-4142-be84-939272179041",
                    "path": "<XRController>{LeftHand}/trackpadPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "157eabea-e1e4-4575-8340-4dc2e61bb613",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44c29c8b-f524-47e3-a93c-d3d63ad52806",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1515e47e-0d5b-4403-8170-bc0adadd2d8a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7116eebe-2afb-4ab5-8183-c74773fac520",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "f82a165e-6184-4802-8da3-8e8207e48332",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VericalMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0d288995-571a-4181-b8a7-7e250edc7e78",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VericalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1a53b76a-482a-46f9-9586-81216fdf728d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VericalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3149aaa2-90fd-4a3a-9960-e10ff41f59db",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VericalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "62a3e071-5d23-4c9b-a75b-6470a4eae366",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VericalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}